--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -17,7 +17,7 @@ body,html {
   align-items: center;
   justify-content: center;
 }
-
+/*i added this line*/
 .key {
   border: .4rem solid black;
   border-radius: .5rem;
